# jorevi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample.env  setup.cfg
.github/workflows/: ci.yaml
config/: api_router.py  asgi.py  celery_app.py  dashboard.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
jorevi/blog/: admin.py  apps.py  managers.py  models.py
jorevi/blog/management/commands/: fake_blog.py
jorevi/blog/migrations/: 0001_initial.py
jorevi/companies/: admin.py  apps.py  managers.py  models.py  resources.py
jorevi/companies/api/: serializers.py  views.py
jorevi/companies/management/commands/: fake_company.py
jorevi/companies/migrations/: 0001_initial.py
jorevi/core/: exceptions.py  mixins.py
jorevi/jobs/: admin.py  apps.py  managers.py  models.py  resources.py
jorevi/jobs/api/: filters.py  serializers.py  views.py
jorevi/jobs/migrations/: 0001_initial.py
jorevi/templates/: _footer.html  _head.html  _navbar.html  _subscribe.html  base.html
jorevi/templates/account/: base.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
jorevi/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
jorevi/users/api/: serializers.py
jorevi/users/migrations/: 0001_initial.py
jorevi/utils/: random.py
tests/: conftest.py
tests/test_blog/: conftest.py  factories.py  test_admin.py  test_managers.py  test_models.py
tests/test_companies/: conftest.py  factories.py  test_managers.py  test_models.py
tests/test_jobs/: conftest.py  e2e_tests.py  factories.py  test_models.py  test_resources.py
tests/test_users/: factories.py  test_admin.py  test_app.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_tasks.py  test_urls.py  test_views.py
(+3 files in other folders)
